--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preload" href="./img/background.jpg" as="image">
+    <link rel="preload" href="./img/CTA-background.jpg" as="image">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./default.css">
@@ -14,11 +16,12 @@
     <script type="module" src="tieFighter.js"></script>
     <script type="module" src="myHomePage.js"></script>
     <style>
-        body {
+        /* body {
             margin: 0;
             overflow: hidden;
             position: relative;
-        }
+            background-image: url('./img/background.jpg');
+        } */
         canvas {
             display: block;
             position: fixed;
