--- a/Feedback.html
+++ b/Feedback.html
@@ -53,7 +53,7 @@
   <main>
     <section class="box">
       <h1>Feedback Form</h1>
-      <form action="mailto:u7544341@anu.edu.au?subject=Website%20Feedback" method="post" enctype="text/plain">
+      <form id="myForm" action="mailto:u7544341@anu.edu.au?subject=Website%20Feedback" method="post" enctype="text/plain">
         <label for="fname">Your Name</label><br>
         <textarea id="fname" name="fname" rows="1" cols="20" placeholder="Your name is..."></textarea><br>
         
