--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- press / press space to skip during the animation, detailed in js -->
         <div id="index-skip" class="skip-container">
             <div class="skip-text">
-                <p>press space to skip</p>
+                <p>press space or touch to skip</p>
             </div>
         </div>
 
@@ -134,7 +134,7 @@
                 <div class="CTA">
                     <p>Hi, I'm Zehua.</p>
                     <p>Welcome to my page.</p>
-                    <p>Additionally, welcome to the Staw Wars Universe...</p>
+                    <p>Additionally, welcome to the Star Wars Universe...</p>
                 </div>
                 <div id="R2-region">
                     <div class="R2D2" id="R2D2">
