--- a/me.html
+++ b/me.html
@@ -64,21 +64,21 @@
         <div class = "my-photo">
           <img src="./img/selfie.jpg" alt="my selfie">
         </div>
-          <p>
+          <div>
             Hey guys, I'm Zehua Liu from Beijing, China. My academic journey began at the Beijing University of Technology, leading me to the University of Melbourne, where I delved into the world of pure mathematics. Presently, I'm embracing the challenges and joys of being a Master of Computing student at ANU, thoroughly enjoying my life in Canberra.
-          </p>
+          </div>
       </div>
       <div class = "my-content">
-        <p>
+        <div>
           So, why "Star Wars" for my website theme? The moment I learned we had the freedom to create a website about anything that captivates us, "Star Wars" instantly sprang to mind. This saga isn't just a series of movies to me; it's a cherished part of my childhood and a passion I've held close ever since. Unlike most of my peers, I have the unique proudness of growing up with a brother eight years older than me, who introduced me to the expansive universe of "Star Wars." Together, we watched the films and collected the merchandise, immersing ourselves in its epic stories and characters. It's a bond and a memory I hold dear, making "Star Wars" an unparalleled favorite even to this day.
-        </p>
+        </div>
         <div class = "my-photo">
           <img src="./img/starWarsImage1.avif" alt="star wars image 1">
         </div>
       </div>
-        <p>
+        <div>
             With this website, I aim to share a slice of the "Star Wars" universe—its captivating concepts, iconic movies, and memorable characters. Whether you're a long-time fan or new to the saga, I hope to offer you a glimpse into why "Star Wars" holds such a special place in my heart.
-        </p>
+        </div>
     </div>
 
     <div class = "reflection-title">Reflection: Learning Through Web Development</div>
